--- a/src/app/helpers/svg-icon/svg-icon.component.scss
+++ b/src/app/helpers/svg-icon/svg-icon.component.scss
@@ -2,10 +2,15 @@
   height: 24px;
   width: 24px;
   background-color: currentColor;
+  mask-size: contain;
   -webkit-mask-size: contain;
+  mask-position: center;
   -webkit-mask-position: center;
+  mask-repeat: no-repeat;
   -webkit-mask-repeat: no-repeat;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   vertical-align: middle;
   flex-shrink: 0;
 }
