Added tile move directive

--- a/src/app/pages/board/board-tile/board-tile.component.html
+++ b/src/app/pages/board/board-tile/board-tile.component.html
@@ -15,7 +15,15 @@
   [style.top.px]="tile.y"
 >
   <div class="tile-surface">
-    <div class="tile-header">
+    <div
+      class="tile-header"
+      boardTileMove=""
+      [pos]="{ x: tile.x, y: tile.y }"
+      [zoom]="zoom"
+      (posChange)="onTileWorldPosChange($event)"
+      (moveStart)="onMoveStart()"
+      (moveEnd)="onMoveEnd()"
+    >
       <div #titleElement class="title-editor"></div>
     </div>
     <div class="tile-body">
